Fixed shift type editor on smaller devices

--- a/src/components/ShiftTypeEditor/index.css
+++ b/src/components/ShiftTypeEditor/index.css
@@ -12,7 +12,7 @@
 }
 
 .shift-type-editor__config-container {
-  width: 372px;
+  max-width: 370px;
   z-index: 2;
   background-color: #ffffff;
   border-radius: 2px;
